# ninos

./: Cargo.toml  build.py  build.sh  buildrun.sh  run.sh  run_with_gdb.sh
src/: main.rs
src/arch/amd64/: memory.rs  mod.rs
src/kernalloc/: mod.rs  stat_alloc.rs  uefi_alloc.rs
src/kernlog/: com1logger.rs  mod.rs
